
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1626] Fixed bug where top menus could not have actions
- [#MODX-1494] Fixed issue where some settings dont have descriptions, and cleaned up deprecated settings
- [#MODX-1645] Fixed incorrect lexicon key for setting_site_start_err
- [#MODX-1646] Fixed issue where download buttons were staying grayed out if there was an error message
- [#MODX-1644] Added SMTP mail settings to default system settings to allow global SMTP usage for all modMail functions
- [#MODX-1606] Fixed bug in modRestCurlClient class due to encoded ampersand
- [#MODX-197] Refactored Action Buttons JS, added 'actionNew', 'actionContinue', and 'actionClose' events to MODx.FormPanel objects, ensured parent/context_key is persisted through add another resources
- Added a couple sanity checks to modRestCurlClient
- Added JS to disable install button when clicked in setup to prevent double-clicks
- controllers/resources/create: Refactored template inheritance to occur before any delegate controller is called.
- processors/resources/create: Moved OnBeforeDocFormSave event invocation until after POST vars are applied to $resource object.
- processors/resources/create: Refactored common code to be executed before any delegate processor is called.
- processors/resources/create: Refactored to respect add_children and new_document_in_root permissions.
- Added various access_denied lexicons to the resource topic.
- Added new_document_in_root permission to control access to creating Resources at the root level.
- Updated to xPDO 2.0 revision 406.
- [#MODX-1606] Added sanity checks and ID standardization to DOM nodes for Package Browser
- Fixed possible bug with ta-toggle div in resource panel